--- a/panel/index.html
+++ b/panel/index.html
@@ -3,32 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Bot Panel</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="password-screen" class="center">
-      <h1 class="gradient-text">Enter Password</h1>
-      <input type="password" id="password-input" placeholder="Password" />
-      <button onclick="validatePassword()">Submit</button>
-      <p id="error" class="error">Incorrect Password</p>
+    <div id="password-screen" class="center glass">
+      <h1 class="title">Sign In</h1>
+      <input type="password" id="password-input" placeholder="Panel password" />
+      <button onclick="submitPassword()">Continue</button>
+      <p id="error" class="error">Incorrect password</p>
     </div>
 
-    <div id="panel" class="center">
-      <h1 class="gradient-text">BDFDX PANEL</h1>
-
+    <div id="panel" class="center glass">
       <div class="card">
         <img class="banner" id="bot-banner" />
         <img class="avatar" id="bot-avatar" />
+
         <h2 id="bot-name"></h2>
         <p id="bot-desc"></p>
-        <button id="invite-btn">Invite</button>
+
+        <button id="invite-btn" class="secondary">Invite to Discord</button>
+        <button id="logout-btn" class="secondary" onclick="logout()">
+          Log out
+        </button>
       </div>
 
-      <div class="stats">
-        <p>Guilds: <span id="guilds">0</span></p>
-        <p>Members: <span id="members">0</span></p>
-        <p>Uptime: <span id="uptime">0s</span></p>
+      <div class="stats glass-sub">
+        <div>
+          <span id="guilds">0</span>
+          <label>Guilds</label>
+        </div>
+        <div>
+          <span id="members">0</span>
+          <label>Members</label>
+        </div>
+        <div>
+          <span id="uptime">0s</span>
+          <label>Uptime</label>
+        </div>
       </div>
     </div>
 
