--- a/panel/index.html
+++ b/panel/index.html
@@ -49,6 +49,47 @@
           <label>Uptime</label>
         </div>
       </div>
+
+      <header class="panel-header">
+        <h2>Your Servers</h2>
+        <span class="muted">Select a guild to manage</span>
+      </header>
+
+      <div id="guild-list" class="guild-list">
+        <!-- guild cards injected here -->
+      </div>
+      <template id="guild-card-template">
+        <div class="guild-card">
+          <img class="guild-icon" />
+          <div class="guild-info">
+            <span class="guild-name"></span>
+            <span class="guild-id muted"></span>
+          </div>
+          <button class="guild-open">Open</button>
+        </div>
+      </template>
+    </div>
+
+    <!-- GUILD PANEL -->
+    <div
+      id="guild-panel"
+      class="center glass"
+      style="display: none; flex-direction: column"
+    >
+      <button
+        id="back-btn"
+        class="secondary"
+        style="align-self: flex-start; margin-bottom: 16px"
+      >
+        ← Back
+      </button>
+      <h2 id="guild-name-header">Guild Name</h2>
+      <p id="guild-id-header"></p>
+
+      <div id="guild-content" style="margin-top: 20px">
+        <!-- Guild management content injected here -->
+        <p>Loading guild data...</p>
+      </div>
     </div>
 
     <script src="script.js"></script>
